manifests-local/deploy-customer.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: coffeeshop-customer-deploy
  labels:
    app: coffeeshop-customer
spec:
  replicas: 2
  selector:
    matchLabels:
      app: coffeeshop-customer
  template:
    metadata:
      labels:
        app: coffeeshop-customer
    spec:
      containers:
        - name: eks-demo-coffeeshop-customer
          image: mortredn/eks-demo-coffeeshop-customer:latest
          resources:
            limits:
              cpu: "250m"
              memory: "512Mi"
          ports:
            - containerPort: 4000
