manifests-local/deploy-shopping.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: coffeeshop-shopping-deploy
  labels:
    app: coffeeshop-shopping
spec:
  replicas: 2
  selector:
    matchLabels:
      app: coffeeshop-shopping
  template:
    metadata:
      labels:
        app: coffeeshop-shopping
    spec:
      containers:
        - name: eks-demo-coffeeshop-shopping
          image: mortredn/eks-demo-coffeeshop-shopping:latest
          resources:
            limits:
              cpu: "250m"
              memory: "512Mi"
          ports:
            - containerPort: 4000
