manifests-local/svc-customer.yaml
apiVersion: v1
kind: Service
metadata:
  name: coffeeshop-customer-svc
spec:
  selector:
    app: coffeeshop-customer
  ports:
    - protocol: TCP
      port: 4000
      targetPort: 4000
