manifests-local/svc-frontend.yaml
apiVersion: v1
kind: Service
metadata:
  name: coffeeshop-frontend-svc
spec:
  selector:
    app: coffeeshop-frontend
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
