manifests-local/ingress-api.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: coffeeshop-ingress-api
  annotations:
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  rules:
    - http:
        paths:
          - path: /api/customer(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: coffeeshop-customer-svc
                port:
                  number: 4000
          - path: /api/shopping(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: coffeeshop-shopping-svc
                port:
                  number: 4000
