manifests-local/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: coffeeshop-ingress-frontend
  annotations:
    nginx.ingress.kubernetes.io/use-regex: "false"
spec:
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: coffeeshop-frontend-svc
                port:
                  number: 8080
          - path: /api/customer
            pathType: Prefix
            backend:
              service:
                name: coffeeshop-customer-svc
                port:
                  number: 4000
          - path: /api/shopping
            pathType: Prefix
            backend:
              service:
                name: coffeeshop-shopping-svc
                port:
                  number: 4000
